--- a/assets/less/menu.less
+++ b/assets/less/menu.less
@@ -82,7 +82,7 @@
 
 .filters{
 	position:relative;
-	border-top:@border_width @secondary_color solid;
+	border-bottom:@border_width @secondary_color solid;
 }
 .filter,form.filter{
 	display:block;
@@ -104,6 +104,7 @@
 }
 .filters.pagnate{
 	padding:@space_size/2 0px;
-	margin:0px @space_size;
 	text-align:right;
+	border-top:@border_width @secondary_color solid;
+	border-bottom:0;
 }
